Changes in Teacher Panel

--- a/LMS/Areas/Admin/Views/User/Index.cshtml
+++ b/LMS/Areas/Admin/Views/User/Index.cshtml
@@ -6,139 +6,127 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="dashboard" id="dashboard">
-   
-    <div class="panel-header panel-header-sm">
-    </div>
-    <div class="content">
-        @*@if (ViewBag.Error != null)
-            {
-                <script type="text/javascript">
-              alert( "@(ViewBag.Error)");
-                </script>
-            }*@
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
+<div class="panel-header panel-header-sm">
+</div>
+<div class="content">
+  
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
 
-                    <div class="container-fluid">
-                        <div class="table-responsive">
-                            <div class="table-wrapper">
-                                <div class="table-title">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <h2>Manage <b>Users</b></h2>
-                                        </div>
-                                        <div class="col-md-6 pull-right">
-                                            <a href="#addUserModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
-                                            
-                                        </div>
+                <div class="container-fluid">
+                    <div class="table-responsive">
+                        <div class="table-wrapper">
+                            <div class="table-title">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h2>Manage <b>Users</b></h2>
+                                    </div>
+                                    <div class="col-md-6 pull-right">
+                                        <a href="#addUserModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
+                                        
                                     </div>
                                 </div>
+                            </div>
 
-                                <table id="userpage" class="display" style="width: 100%;">
-                                    <thead>
+                            <table id="userpage" class="display" style="width: 100%;">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>User Name</th>
+                                        <th>User Email</th>
+                                        @*<th>User Password</th>*@
+                                        <th>User Role</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in ViewBag.User)
+                                    {
                                         <tr>
-                                            <th>Id</th>
-                                            <th>User Name</th>
-                                            <th>User Email</th>
-                                            @*<th>User Password</th>*@
-                                            <th>User Role</th>
-                                            <th>Action</th>
+                                            <td>@item.UserId</td>
+                                            <td>@item.UserName</td>
+                                            <td>@item.UserEmail</td>
+                                            @*<td>@item.UserPassword</td>*@
+                                            <td>@item.UserRole</td>
+                                            <td>
+                                                <a href="#editUserModal" class="edit" id="edit" data-toggle="modal">
+                                                    <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
+                                                </a>
+
+                                                <a href="#deleteUserModal" class="delete" id="delete" data-toggle="modal">
+                                                    <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
+                                                </a>
+
+
+                                                <a asp-area="admin" asp-controller="user" asp-action="resetPassword" asp-route-id="@item.UserId" class="ResetPassword" id="ResetPassword">
+                                                    <i class="fa fa-refresh" aria-hidden="true" title="ResetPassword" data-original-title="ResetPassword" style="font-size:18px;vertical-align: super;"></i>
+                                                </a>
+
+                                                
+
+
+
+
+                                                @*Added BY Absar To get parentid*@
+                                                <input type="hidden" class="User_Id" value="@item.UserId" />
+
+                                            </td>
                                         </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in ViewBag.User)
-                                        {
-                                            <tr>
-                                                <td>@item.UserId</td>
-                                                <td>@item.UserName</td>
-                                                <td>@item.UserEmail</td>
-                                                @*<td>@item.UserPassword</td>*@
-                                                <td>@item.UserRole</td>
-                                                <td>
-                                                    <a href="#editUserModal" class="edit" id="edit" data-toggle="modal">
-                                                        <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
-                                                    </a>
+                                    }
+                                </tbody>
+                            </table>
+                            <div class="clearfix">
 
-                                                    <a href="#deleteUserModal" class="delete" id="delete" data-toggle="modal">
-                                                        <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
-                                                    </a>
-
-
-                                                    <a asp-area="admin" asp-controller="user" asp-action="resetPassword" asp-route-id="@item.UserId" class="ResetPassword" id="ResetPassword">
-                                                        <i class="fa fa-refresh" aria-hidden="true" title="ResetPassword" data-original-title="ResetPassword" style="font-size:20px;"></i>
-                                                    </a>
-
-                                                    @*<a asp-area="admin" asp-controller="user" asp-action="resetPassword" asp-route-id="@item.UserId" class="ResetPassword" id="ResetPassword">
-                                                            <i class="fa fa-refresh" aria-hidden="true" title="ResetPassword" data-original-title="ResetPassword" style="font-size:20px;"></i>
-                                                        </a>*@
-
-
-
-
-                                                    @*Added BY Absar To get parentid*@
-                                                    <input type="hidden" class="User_Id" value="@item.UserId" />
-
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-                                <div class="clearfix">
-
-                                </div>
                             </div>
                         </div>
-                        <!-- Add Modal HTML -->
-                        <div id="addUserModal" class="modal fade">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <form method="post" asp-controller="user" asp-action="addUser">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Add User</h4>
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    </div>
+                    <!-- Add Modal HTML -->
+                    <div id="addUserModal" class="modal fade">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form method="post" asp-controller="user" asp-action="addUser">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Add User</h4>
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                    </div>
+                                    <div class="modal-body">
+                                       
+                                        <div class="form-group">
+                                            <label>User Name</label>
+                                            <input type="text" class="form-control" required="" name="UserName">
                                         </div>
-                                        <div class="modal-body">
-                                            @*<div class="form-group">
-                                                    <label>Class ID</label>
-                                                    <input type="text" class="form-control" required="" name="User_Id">
-                                                </div>*@
-                                            <div class="form-group">
-                                                <label>User Name</label>
-                                                <input type="text" class="form-control" required="" name="UserName">
-                                            </div>
 
-                                            <div class="form-group">
-                                                <label>User Email</label>
-                                                <input type="text" class="form-control" required="" name="UserEmail">
-                                            </div>
-
-                                            <div class="form-group">
-                                                <label>User Password</label>
-                                                <input type="text" class="form-control" required="" name="UserPassword">
-                                            </div>
-
-                                            <div class="form-group">
-
-                                                <label>User Role</label>
-
-                                                <select id="UserRole" name="UserRole" class="form-control" asp-items="@(new SelectList(ViewBag.Role, "Id", "Name"))"></select>
-
-                                            </div>
+                                        <div class="form-group">
+                                            <label>User Email</label>
+                                            <input type="text" class="form-control" required="" name="UserEmail">
                                         </div>
-                                        <div class="modal-footer">
-                                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                            <input type="submit" class="btn btn-success" value="Add">
+
+                                        <div class="form-group">
+                                            <label>User Password</label>
+                                            <input type="text" class="form-control" required="" name="UserPassword">
                                         </div>
-                                    </form>
-                                </div>
+
+                                        <div class="form-group">
+
+                                            <label>User Role</label>
+
+                                            <select id="UserRole" name="UserRole" class="form-control" asp-items="@(new SelectList(ViewBag.Role, "Id", "Name"))"></select>
+
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                        <input type="submit" class="btn btn-success" value="Add">
+                                    </div>
+                                </form>
                             </div>
                         </div>
+                    </div>
 
 
-                        <!-- Edit Modal HTML -->
-                        <div id="editUserModal" class="modal fade">
+                    <!-- Edit Modal HTML -->
+                    <div id="editUserModal" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <form method="post" asp-controller="user" asp-action="editUser">
@@ -184,8 +172,8 @@
                         </div>
 
 
-                        <!-- Delete Modal HTML -->
-                        <div id="deleteUserModal" class="modal fade">
+                    <!-- Delete Modal HTML -->
+                    <div id="deleteUserModal" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <form method="post" asp-controller="user" asp-action="deleteUser">
@@ -210,44 +198,43 @@
                             </div>
                         </div>
 
-                    </div>
                 </div>
             </div>
         </div>
-
-
-
-
-        <footer class="footer">
-            <div class=" container-fluid ">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="https://www.creative-tim.com">
-                                Karachi Grammar School
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://presentation.creative-tim.com">
-                                About Us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://blog.creative-tim.com">
-                                Blog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="copyright" id="copyright">
-                    &copy;
-                    <script>
-                        document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                    </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-                </div>
-            </div>
-        </footer>
     </div>
+
+
+
+
+    <footer class="footer">
+        <div class=" container-fluid ">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://www.creative-tim.com">
+                            Karachi Grammar School
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://presentation.creative-tim.com">
+                            About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://blog.creative-tim.com">
+                            Blog
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="copyright" id="copyright">
+                &copy;
+                <script>
+                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+            </div>
+        </div>
+    </footer>
 </div>
 
 <!--   Core JS Files   -->
@@ -255,7 +242,6 @@
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
 <link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
 <script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
-@*<script src="~/Dashboard/assets/js/navigation.js"></script>*@
 <script type="text/javascript">
 
 </script>
