--- a/LMS/Areas/Admin/Views/Grade/Index.cshtml
+++ b/LMS/Areas/Admin/Views/Grade/Index.cshtml
@@ -5,196 +5,189 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="dashboard" id="dashboard">
 
-    <div class="panel-header panel-header-sm">
-    </div>
-    <div class="content">
-        @*@if (ViewBag.Error != null)
-            {
-                <script type="text/javascript">
-              alert( "@(ViewBag.Error)");
-                </script>
-            }*@
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
+<div class="panel-header panel-header-sm">
+</div>
+<div class="content">
 
-                    <div class="container-fluid">
-                        <div class="table-responsive">
-                            <div class="table-wrapper">
-                                <div class="table-title">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <h2>Manage <b>Grade</b></h2>
-                                        </div>
-                                        <div class="col-md-6 pull-right">
-                                            <a a asp-area="admin" asp-controller="student" asp-action="addStudent" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Grade</span></a>
-                                        </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+
+                <div class="container-fluid">
+                    <div class="table-responsive">
+                        <div class="table-wrapper">
+                            <div class="table-title">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h2>Manage <b>Grade</b></h2>
+                                    </div>
+                                    <div class="col-md-6 pull-right">
+                                        <a a asp-area="admin" asp-controller="grade" asp-action="addGrade" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Grade</span></a>
                                     </div>
                                 </div>
+                            </div>
 
-                                <table id="gradepage" class="display" style="width:100%">
-                                    <thead>
+                            <table id="gradepage" class="display" style="width:100%">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Grade Name</th>
+                                        <th>Start From</th>
+                                        <th>End On</th>
+                                        <th>Class Name</th>
+                                        <th>Section Name</th>
+                                        <th>Subject Name</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
                                         <tr>
-                                            <th>ID</th>
-                                            <th>Grade Name</th>
-                                            <th>Start From</th>
-                                            <th>End On</th>
-                                            <th>Class Name</th>
-                                            <th>Section Name</th>
-                                            <th>Subject Name</th>
-                                            <th>Action</th>
+                                            <td>@item.Grade_Id</td>
+                                            <td>@item.Grade_Name</td>
+                                            <td>@item.Start_From</td>
+                                            <td>@item.End_On</td>
+                                            <td>@item.Class_Name</td>
+                                            <td>@item.Section_Name</td>
+                                            <td>@item.Subject_Name</td>
+                                            <td>
+
+
+                                                <a href="#editGradeModal" class="edit" id="edit" data-toggle="modal">
+                                                    <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
+                                                </a>
+
+                                                <a href="#deleteGradeModal" class="delete" id="delete" data-toggle="modal">
+                                                    <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
+                                                </a>
+
+                                                @*Added BY Absar To get parentid*@
+                                                <input type="hidden" class="Grade_Id" value="@item.Grade_Id" />
+
+                                            </td>
                                         </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in Model)
-                                        {
-                                            <tr>
-                                                <td>@item.Grade_Id</td>
-                                                <td>@item.Grade_Name</td>
-                                                <td>@item.Start_From</td>
-                                                <td>@item.End_On</td>
-                                                <td>@item.Class_Name</td>
-                                                <td>@item.Section_Name</td>
-                                                <td>@item.Subject_Name</td>
-                                                <td>
+                                    }
+                                </tbody>
+                            </table>
 
-
-                                                    <a href="#editGradeModal" class="edit" id="edit" data-toggle="modal">
-                                                        <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Edit"></i>
-                                                    </a>
-
-                                                    <a href="#deleteGradeModal" class="delete" id="delete" data-toggle="modal">
-                                                        <i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i>
-                                                    </a>
-
-                                                    @*Added BY Absar To get parentid*@
-                                                    <input type="hidden" class="Grade_Id" value="@item.Grade_Id" />
-
-                                                </td>
-                                            </tr>
-                                        }
-                                    </tbody>
-                                </table>
-
-                            </div>
                         </div>
-
-
-
-                        <!-- Edit Modal HTML -->
-                        <div id="editGradeModal" class="modal fade">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <form method="post" asp-controller="grade" asp-action="editGrade">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Edit Class</h4>
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="form-group">
-                                                <label>Grade ID</label>
-                                                <input type="text" class="form-control" required="" id="Grade_Id" disabled="disabled">
-                                            </div>
-                                            <div class="form-group">
-                                                <label>Class Name</label>
-                                                <input type="text" class="form-control" required="" name="Grade_Name" id="Grade_Name">
-                                            </div>
-                                            <div class="form-group">
-                                                <label>Start From</label>
-                                                <input type="text" class="form-control" required="" name="Start_From" id="Start_From">
-                                            </div>
-                                            <div class="form-group">
-                                                <label>End On</label>
-                                                <input type="text" class="form-control" required="" name="End_On" id="End_On">
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                            <input type="submit" class="btn btn-info" value="Save">
-                                            @*Added By Absar*@
-                                            <input type="hidden" name="Grade_Id" id="Grade_Id" />
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <!-- Delete Modal HTML -->
-                        <div id="deleteGradeModal" class="modal fade">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <form method="post" asp-controller="grade" asp-action="deleteGrade">
-                                        <div class="modal-header">
-                                            <h4 class="modal-title">Delete Class</h4>
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>Are you sure you want to delete these Records?</p>
-                                            <p class="text-warning"><small>This action cannot be undone.</small></p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                            <input type="submit" class="btn btn-danger" value="Delete">
-
-                                            @*//Added By Absar To Pass Parameter to action method*@
-                                            <input type="hidden" id="Grade_Id" name="Grade_Id" />
-
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-
-
                     </div>
+
+
+
+                    <!-- Edit Modal HTML -->
+                    <div id="editGradeModal" class="modal fade">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form method="post" asp-controller="grade" asp-action="editGrade">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Edit Class</h4>
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="form-group">
+                                            <label>Grade ID</label>
+                                            <input type="text" class="form-control" required="" id="Grade_Id" disabled="disabled">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Class Name</label>
+                                            <input type="text" class="form-control" required="" name="Grade_Name" id="Grade_Name">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Start From</label>
+                                            <input type="text" class="form-control" required="" name="Start_From" id="Start_From">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>End On</label>
+                                            <input type="text" class="form-control" required="" name="End_On" id="End_On">
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                        <input type="submit" class="btn btn-info" value="Save">
+                                        @*Added By Absar*@
+                                        <input type="hidden" name="Grade_Id" id="Grade_Id" />
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- Delete Modal HTML -->
+                    <div id="deleteGradeModal" class="modal fade">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form method="post" asp-controller="grade" asp-action="deleteGrade">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Delete Class</h4>
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to delete these Records?</p>
+                                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                                        <input type="submit" class="btn btn-danger" value="Delete">
+
+                                        @*//Added By Absar To Pass Parameter to action method*@
+                                        <input type="hidden" id="Grade_Id" name="Grade_Id" />
+
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
-
-
-
-
-        <footer class="footer">
-            <div class=" container-fluid ">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="https://www.creative-tim.com">
-                                Karachi Grammar School
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://presentation.creative-tim.com">
-                                About Us
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://blog.creative-tim.com">
-                                Blog
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="copyright" id="copyright">
-                    &copy;
-                    <script>
-                        document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                    </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-                </div>
-            </div>
-        </footer>
     </div>
+
+
+
+
+    <footer class="footer">
+        <div class=" container-fluid ">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://www.creative-tim.com">
+                            Karachi Grammar School
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://presentation.creative-tim.com">
+                            About Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://blog.creative-tim.com">
+                            Blog
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="copyright" id="copyright">
+                &copy;
+                <script>
+                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+            </div>
+        </div>
+    </footer>
 </div>
+
 
 <!--   Core JS Files   -->
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
 <link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
 <script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
-@*<script src="~/Dashboard/assets/js/navigation.js"></script>*@
 <script>
     $(document).ready(function () {
 
