--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -181,7 +181,7 @@
                         </div>
                         @if (SignInManager.IsSignedIn(User))
                         {
-                            <a class="navbar-brand" asp-area="admin" asp-controller="dashboard" asp-action="index">Dashboard - Hello @UserManager.GetUserName(User)!</a>
+                            <a class="navbar-brand" asp-area="admin" asp-controller="dashboard" asp-action="index" style="font-size:1.1em; font-weight:600;">Dashboard - Hello @UserManager.GetUserName(User)!</a>
                         }
 
                     </div>
@@ -202,35 +202,21 @@
                             </div>
                         </form>
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <i class="now-ui-icons media-2_sound-wave"></i>
-                                    <p>
-                                        <span class="d-lg-none d-md-block">Stats</span>
-                                    </p>
-                                </a>
-                            </li>
+
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="now-ui-icons location_world"></i>
+                                    <i class="now-ui-icons users_single-02"></i>
                                     <p>
-                                        <span class="d-lg-none d-md-block">Some Actions</span>
+                                        <span class="d-lg-none d-md-block"></span>
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
+                                    <a class="dropdown-item" href="#">User Profile</a>
+                                    <a class="dropdown-item" asp-controller="Login" asp-action="logOut">Logout</a>
+
                                 </div>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <i class="now-ui-icons users_single-02"></i>
-                                    <p>
-                                        <span class="d-lg-none d-md-block">Account</span>
-                                    </p>
-                                </a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
