Adding Student as a User While Adding Student

--- a/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSection/Index.cshtml
@@ -230,7 +230,7 @@
             
             toastr.success(messageSuccess);
         }
-        else if (messageError > 0)  {
+        else if (messageError.length > 0) {
             toastr.error(messageError);
         }
 
