--- a/LMS/Areas/Admin/Views/Teacher/TeacherSubjectDetail.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/TeacherSubjectDetail.cshtml
@@ -49,7 +49,7 @@
                                             <td>@item.Subject_Name</td>
                                             <td>
                                                 <a asp-area="admin" asp-controller="teacher" asp-action="teacherClassesSubjects" asp-route-id="@item.Teacher_Id" class="studentSubject" id="studentSubject">
-                                                    <i class="btn btn-primary" data-toggle="tooltip" title="" data-original-title="AssignClass" style="line-height: 1em; border-radius: 2em;">Subjects</i>
+                                                    <i class="btn btn-primary" data-toggle="tooltip" title="" data-original-title="AssignedSubject" style="line-height: 1em; border-radius: 2em;">Subjects</i>
                                                 </a>
 
                                             </td>
