--- a/LMS/Areas/Admin/Views/AssignSubject/AddClassSubject.cshtml
+++ b/LMS/Areas/Admin/Views/AssignSubject/AddClassSubject.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-    
+
 <div class="panel-header panel-header-sm">
 </div>
 <div class="content">
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                             <form asp-action="addClassSubject" method="post">
-                                
+
                                 <br /><br />
                                 <div class="row">
                                     <div class="col-md-4 pr-1">
@@ -56,7 +56,7 @@
                                         <table id="assignClassSubjectpage" class="table table-striped table-hover table-sm" style="width:100%">
                                             <thead>
                                                 <tr>
-                                                    <th><input type="checkbox" class="checkbox-radios" /></th>
+                                                    <th><input type="checkbox" class="checkbox-radios" id="selectAllSubjects" /></th>
                                                     <th>Subject Name</th>
                                                     <th></th>
 
@@ -95,9 +95,9 @@
                                 </div>
 
 
-                                    <div class="clearfix">
+                                <div class="clearfix">
 
-                                    </div>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -153,5 +153,19 @@
 
 
 
+<script src="~/Dashboard/assets/js/core/jquery.min.js"></script>
+<script>
 
+    $(document).ready(function () {
+
+        
+        $('#selectAllSubjects').click(function (e) {
+            $(this).closest('table').find('td input:checkbox').prop('checked', this.checked);
+        });
+
+    });
+
+
+
+</script>
 
