--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -211,7 +211,7 @@
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">User Profile</a>
+                                    <a class="dropdown-item" asp-controller="Login" asp-action="profile">User Profile</a>
                                     <a class="dropdown-item" asp-controller="Login" asp-action="logOut">Logout</a>
 
                                 </div>
@@ -243,7 +243,7 @@
     <script src="~/Dashboard/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
 
     <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    
     <!-- Chart JS -->
     @*<script src="../assets/js/plugins/chartjs.min.js"></script>*@
     <script src="~/Dashboard/assets/js/plugins/chartjs.min.js"></script>
