--- a/LMS/Areas/Admin/Views/Teacher/AddTeacher.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/AddTeacher.cshtml
@@ -104,7 +104,7 @@
                                             <div class="row">
                                                 <div class="col-md-4 pr-1">
                                                     <div class="form-group">
-                                                        <label>Email</label>
+                                                        <label>Email (Login Id)</label>
                                                         <input asp-for="Teacher_Email" type="text" class="form-control" placeholder="Email">
                                                     </div>
                                                 </div>
