--- a/LMS/Areas/Admin/Views/Teacher/AssignTeacherSubject.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/AssignTeacherSubject.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="dashboard" id="dashboard">
-   
+
     <div class="panel-header panel-header-sm">
     </div>
     <div class="content">
@@ -23,35 +23,35 @@
                                             <h2>Add <b>Teacher Subjects</b></h2>
                                         </div>
                                         @*<div class="col-md-6 pull-right">
-                                            <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
-                                            <a href="#deleteClassSectionModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
-                                        </div>*@
+                                                <a asp-area="admin" asp-controller="assignSubject" asp-action="addClassSubject" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add New Class Subjects</span></a>
+                                                <a href="#deleteClassSectionModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                            </div>*@
                                     </div>
                                 </div>
                                 <form asp-action="assignTeacherSubject" method="post">
-                                    
+
                                     <br /><br />
-                                          <div class="row">
-                                              <div class="col-md-4 pr-1">
+                                    <div class="row">
+                                        <div class="col-md-4 pr-1">
 
-                                                  <div class="form-group">
-                                                      <label>Teacher Id </label>
-                                                      <input type="text" class="form-control" placeholder="Teacher ID" disabled="" id="Teacher_Id" name="Teacher_Id" asp-for="Teacher_Id">
-                                                  </div>
+                                            <div class="form-group">
+                                                <label>Teacher Id </label>
+                                                <input type="text" class="form-control" placeholder="Teacher ID" disabled="" id="Teacher_Id" name="Teacher_Id" asp-for="Teacher_Id">
+                                            </div>
 
-                                              </div>
-                                              <div class="col-md-4 pr-1">
+                                        </div>
+                                        <div class="col-md-4 pr-1">
 
-                                                  <div class="form-group">
-                                                      <label>Teacher Name</label>
-                                                      <input type="text" class="form-control" placeholder="Teacher Name" disabled="" id="Teacher_Name" name="Teacher_Name" asp-for="Teacher_Name">
-                                                  </div>
+                                            <div class="form-group">
+                                                <label>Teacher Name</label>
+                                                <input type="text" class="form-control" placeholder="Teacher Name" disabled="" id="Teacher_Name" name="Teacher_Name" asp-for="Teacher_Name">
+                                            </div>
 
-                                              </div>
+                                        </div>
 
-                                              <input hidden asp-for="Teacher_Id" />
+                                        <input hidden asp-for="Teacher_Id" />
 
-                                          </div>
+                                    </div>
 
                                     <br /><br />
                                     <div class="row">
@@ -79,7 +79,7 @@
                                             <table id="assignClassSubjectpage" class="table table-striped table-hover table-sm" style="width:100%">
                                                 <thead>
                                                     <tr>
-                                                        <th><input type="checkbox" class="checkbox-radios" /></th>
+                                                        <th><input type="checkbox" class="checkbox-radios" id="selectAllSubjects" /></th>
                                                         <th>Subject Name</th>
                                                         <th></th>
 
@@ -175,3 +175,21 @@
     </div>
 </div>
 
+
+
+
+<script src="~/Dashboard/assets/js/core/jquery.min.js"></script>
+<script>
+
+    $(document).ready(function () {
+
+
+        $('#selectAllSubjects').click(function (e) {
+            $(this).closest('table').find('td input:checkbox').prop('checked', this.checked);
+        });
+
+    });
+
+
+
+</script>
