Teacher test section completed

--- a/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LMS/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -45,6 +45,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <link href="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.css" rel="stylesheet" />
+    <style>
+        .form-group input[type=file] {
+            opacity: 1 !important;
+        } 
+    </style>
 </head>
 <body class="">
     <div class="wrapper ">
