--- a/LMS/Areas/Teachers/Views/Class/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Index.cshtml
@@ -43,7 +43,7 @@
                                             <td>@item.Class_Name</td>
                                             <td>@item.Section_Name</td>
                                             <td>
-                                                <a asp-action="Subjects" asp-controller="Class" asp-route-ClassSubjectId="@item.ClassSubject_Id"  class="edit">View More<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+                                                <a asp-action="Subjects" asp-controller="Class" asp-route-ClassSectionId="@item.ClassSection_Id"  class="edit">View More<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
                                             </td>
                                         </tr>
                                         }
