--- a/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
@@ -22,7 +22,7 @@
                                             <h2>Lecture  <b>List</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
-                                            <a href="teacher_class_lecture_add.html" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lecture</span></a>
+                                            <a asp-action="AddLecture" asp-controller="Lecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lecture</span></a>
                                         </div>
                                     </div>
                                 </div>
