teacher panel with attendance and announcement

--- a/LMS/Areas/Admin/Views/Teacher/AddTeacher.cshtml
+++ b/LMS/Areas/Admin/Views/Teacher/AddTeacher.cshtml
@@ -85,11 +85,16 @@
                                                         <input asp-for="Teacher_Cnic" type="text" class="form-control" placeholder="CNIC">
                                                     </div>
                                                 </div>
-                                                <div class="col-md-4 pl-1">
+                                                @*<div class="col-md-4 pl-1">
                                                     <div class="form-group">
                                                         <label>Date Of Birth</label>
                                                         <input asp-for="Teacher_DOB" type="text" class="form-control" placeholder="DOB">
                                                     </div>
+                                                </div>*@
+
+                                                <div class="form-group">
+                                                    <label>Date</label>
+                                                    <input asp-for="Teacher_DOB" class="form-control" type="datetime-local" data-val="true" data-val-required="The Teacher_DOB field is required." id="Teacher_DOB" name="Teacher_DOB" value="">
                                                 </div>
 
                                                 <div class="col-md-4 pl-1">
