--- a/LMS/Areas/Teachers/Views/Class/Subjects.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Subjects.cshtml
@@ -29,7 +29,7 @@
                                         <th>Subject ID</th>
                                         <th>Subject Name</th>
                                         <th>Class Name</th>
-                                        <th>Lecture Count</th>
+                                        <th>Lesson Uploaded</th>
                                         <th>Details</th>
                                     </tr>
                                 </thead>
