--- a/LMS/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml
+++ b/LMS/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml
@@ -89,7 +89,7 @@
                             <p>Attendance</p>
                         </a>
                         <ul>
-                            <li><a href="#">Session</a></li>
+                            <li><a asp-area="teachers" asp-controller="attendance" asp-action="session">Session</a></li>
                         </ul>
                     </li>
 
