--- a/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/AddStudent.cshtml
@@ -88,7 +88,7 @@
                                                        
                                                         <div class="form-group">
                                                             <label>Date Of Birth</label>
-                                                            <input asp-for="Student_DOB" class="form-control" type="datetime-local" id="DOB" name="birthdaytime">
+                                                            <input asp-for="Student_DOB" class="form-control" type="date" data-val="true" data-val-required="The Student_DOB field is required." id="Student_DOB" name="Student_DOB" value="">
                                                         </div>
                                                     </div>
 
